# eh_validation2025

./: .gitignore  README.md  pyproject.toml
idf/: cubo_EPS.bnd  cubo_EPS.eio  cubo_EPS.err  cubo_EPS.idf  cubo_EPS.mdd  cubo_EPS.rdd  cubo_EPS.rvaudit  cubo_EPS.shd  cubo_EPSTable.html  cubo_EPS_V2410.idf  cubo_EPS_transition.audit
notebooks/: 001_EnerHabitat_EnergyPlus.ipynb
