[project]
name = "eh-validation2025"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "iertools",
    "jupyter>=1.1.1",
    "matplotlib>=3.10.7",
    "notebook>=7.4.7",
    "pandas>=2.3.3",
]

[tool.uv.sources]
iertools = { git = "https://github.com/altamarmx/iertools.git" }
